<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedNews"
    android:background="@color/white">



    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="onBackClick"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/circular_txt"
        android:fontFamily="@font/benton_sans_bold"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        tools:text="H" />

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        app:layout_constraintStart_toEndOf="@id/mark"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow" />

    <TextView
        android:id="@+id/dateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/benton_sans_regular"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/sourceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/benton_sans_medium"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/dateTxt"
        tools:text="@string/source_name" />

    <TextView
        android:id="@+id/completeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/benton_sans_bold"
        android:lines="3"
        android:maxLines="3"
        android:minLines="1"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceName"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/contentTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/benton_sans_regular"
        android:lines="3"
        android:maxLines="3"
        android:minLines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completeTitle"
        tools:text="@string/content" />

    <TextView
        android:id="@+id/readMore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/benton_sans_medium"
        android:textColor="@color/black"
        android:onClick="readMoreClick"
        android:textSize="16sp"
        android:lines="3"
        android:maxLines="3"
        android:minLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTxt"
        android:text="@string/read_more"/>

    <TextView
        android:id="@+id/shareNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/benton_sans_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:lines="3"
        android:maxLines="3"
        android:minLines="1"
        android:onClick="shareNowClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTxt"
        android:text="@string/share_now"/>
    <ImageView
        android:id="@+id/newsImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readMore"/>

</androidx.constraintlayout.widget.ConstraintLayout>