<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/newsTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/benton_sans_bold"
            android:text="@string/news"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/benton_sans_medium"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/heyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/benton_sans_medium"
            android:text="@string/hey_txt"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsTxt" />

        <TextView
            android:id="@+id/discoverTxt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/benton_sans_bold"
            android:text="@string/discover"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heyTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:columnCount="2"
        android:rowCount="2">

        <EditText
            android:id="@+id/seachEditTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:ems="10"
            android:hint="Search For News"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="#797A79" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/ic_baseline_search_24"
            android:onClick="searchQuery"
            android:padding="10dp" />
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_icons"
                android:onClick="categoryClick"
                android:padding="5dp"
                android:src="@drawable/ic_mic"
                android:tag="1" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/mic"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/benton_sans_regular"
                android:text="@string/politics"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movies"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_icons"
                android:onClick="categoryClick"
                android:padding="5dp"
                android:src="@drawable/ic_movie"
                android:tag="2" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/movies"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/benton_sans_regular"
                android:text="@string/movie"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sports"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_icons"
                android:onClick="categoryClick"
                android:padding="5dp"
                android:src="@drawable/ic_sports"
                android:tag="3" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sports"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/benton_sans_regular"
                android:text="@string/sports"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/crime"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_icons"
                android:onClick="categoryClick"
                android:padding="5dp"
                android:src="@drawable/ic_crime"
                android:tag="4" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/crime"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/benton_sans_regular"
                android:text="@string/crime"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </RelativeLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        tools:listitem="@layout/items" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shrimmer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <include layout="@layout/item_shrimmer" />

            <include layout="@layout/item_shrimmer" />

            <include layout="@layout/item_shrimmer" />

            <include layout="@layout/item_shrimmer" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
</LinearLayout>